# bat

./: .gitattributes  .gitignore  Cargo.toml  README.md  build.rs  rustfmt.toml
.cargo/: config_fast_builds.toml
.github/: FUNDING.yml
assets/levels/: splash-screen.ldtk
scripts/: build.sh
src/: lib.rs  main.rs
src/animation/: components.rs  mod.rs  systems.rs
src/bootstrap/: mod.rs
src/camera/: components.rs  mod.rs  systems.rs
src/entities/: mod.rs
src/entities/characters/: mod.rs
src/entities/characters/julien/: components.rs  mod.rs  systems.rs
src/entities/props/: mod.rs
src/entities/props/pole/: components.rs  mod.rs  systems.rs
src/input/: components.rs  mod.rs
src/input/debug_actions/: components.rs  mod.rs  systems.rs
src/input/global/: components.rs  mod.rs  systems.rs
src/performance/: mod.rs  systems.rs
src/physics/: mod.rs  systems.rs
src/player/: components.rs  mod.rs  systems.rs
src/states/: components.rs  mod.rs
src/states/main_menu/: components.rs  mod.rs  systems.rs
src/states/splash_screen/: components.rs  mod.rs  systems.rs
src/states/splash_screen/julien/: mod.rs
src/states/splash_screen/pole/: components.rs  mod.rs
