[package]
authors = ["Julien Andreu <julienandreu@me.com>"]
categories = ["game-development"]
description = ""
edition = "2021"
exclude = ["assets/"]
homepage = "https://github.com/julienandreu/bat"
keywords = ["gamedev", "bevy", "game"]
license = "Apache-2.0"
name = "bat"
repository = "https://github.com/julienandreu/bat"
version = "0.1.0"

[features]
default = ["release"]
dev = ["bevy/file_watcher", "bevy/dynamic_linking"]
tracing = ["bevy/trace_chrome"]
release = []

[dependencies.bevy]
version = "0.14"
features = ["png"]

[dependencies]
# keep the following in sync with Bevy's dependencies
winit = { version = "0.30", default-features = false }
image = { version = "0.25", default-features = false }
## This greatly improves WGPU's performance due to its heavy use of trace! calls
log = { version = "0.4", features = [
  "max_level_debug",
  "release_max_level_off",
] }
tracing = { version = "0.1", features = [
  "max_level_debug",
  "release_max_level_off",
] }

# generic dependencies
serde = { version = "1", features = ["derive"] }
anyhow = "1"

# Bevy plugins
bevy_ecs_ldtk = "0.10"
bevy_egui = "0.28"                                                               # version governed by bevy_editor_pls and leafwing-input-manager
bevy_rapier2d = { version = "*", features = ["simd-stable", "debug-render-2d"] }
leafwing-input-manager = "0.15"
rand = "0.8"
iyes_perf_ui = "0.3"
bevy_embedded_assets = "0.11.0"

[build-dependencies]
embed-resource = "2"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# High optimizations for distributing the game
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
